--- a/index.html
+++ b/index.html
@@ -62,12 +62,22 @@
         </div>
     </div>
     
-    <div class="bgimg-1">
+    <div class="bgblack">
         <div class= "container">
             <div class="row">
-                <div class="col-md-12">
-                    
-                    <br>
+                <div class="col-md-12 text-right top1xspace">
+                    <h2 class="white">Paris At Night</h2>
+                    <h4 class="gold">A CELEBRATION OF LOVE</h4>
+                </div>
+            </div>
+            <div class="row bottomspace">
+                <div class="col-md-6">
+                    <img class="img-responsive center-block" src="img/louvre.png">
+                </div>
+                <div class="col-md-6 white text-right">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                    <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
                 </div>
             </div>
         </div>
@@ -76,11 +86,11 @@
     <div class= "container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <br><br>
-                <h2>OUR STORY</h2>
+                <h2>Our Story</h2>
                 <h4 class="gold">A JOURNEY THROUGH GENERATIONS</h4>
-                <p>This is a placeholder for our journey through Paris.</p>
-                <img class="img-responsive center-block" src="img/whiterose.png">
+                <p>Mia's nana and papa</p>
+                <p>Sean's grandma and grandpa</p>
+                <img class="img-responsive center-block logo" src="img/whiterose.png">
             </div>
         </div>
     </div>
