adding mia's email address

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class= "container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <a href="mailto:sean@prome.ai"><img class="img-responsive center-block logo" src="img/Maison_de_Everett.png"></a>
+                <a href="mailto:sean@prome.ai,mialw@mac.com"><img class="img-responsive center-block logo" src="img/Maison_de_Everett.png"></a>
             </div>
         </div>
         
