adding hotel venue etc text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,26 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <img class="img-responsive center-block" src="img/invitation_transparent.png">
-                <br>
+            </div>
+        </div>
+        
+        <div class="row top1xspace">
+            <div class="col-md-4">
+                <h1>FLIGHT</h1>
+                <p>While you may choose any airline you wish, we have found that <a href="https://www.virginamerica.com">Virgin America</a> offers not just the most ecsquisite pricing, but also a truly calming travel experience. However, should you wish to do your own searching, may we offer <a href="https://www.hipmunk.com">Hipmunk</a> or <a href="http://priceline.com">Priceline</a> as wonderful alternatives.</p>
+            </div>
+            <div class="col-md-4">
+                <h1>HOTEL</h1>
+                <p>The wedding party will be staying in the 1st Arrondissement breathtakingly near the Louvre. We will be reserving a block of rooms nearby and will update this section once it becomes available.</p>
+            </div>
+            <div class="col-md-4">
+                <h1>VENUE</h1>
+                <p>Our Parisian adventure will commence promptly at 5 o'clock in the evening, just as the city is transforming itself into the City of Light. We will provide transportation from the hotel to the singular venue where our short ceremony will be followed by hors d'oeuvres, dinner, and merriment.</p>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-12 text-center top2xspace">
                 <footer>
                     <p><a href="https://twitter.com/seanmeverett">@SeanMEverett</a> &nbsp; & &nbsp; <a href="https://twitter.com/mariawoike">@MariaWoike</a></p>
                 </footer>
