--- a/index.html
+++ b/index.html
@@ -25,19 +25,10 @@
 			<div class="preloader"></div>
 			<section id="hero" class="section-hero">
 				<div class="owl-carousel owl-full-width owl-theme">
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/engagement/bubbies.jpg" alt="" class="img-as-bg"></div>
 				</div>
 				<div class="announcement-wrapper">
 					<div class="announcement animation-chain" data-animation="fadeInUp">
-						<div class="heart">
-							<svg width="38px" height="35px" viewBox="0 0 38 35">
-								<use class="shape-heart" xlink:href="img/heart.svg#shape-heart"></use>
-							</svg>
-						</div>
 						<div class="decor decor-inverse">
 							<svg width="281px" height="51px" viewBox="0 0 281 51">
 								<use class="shape-decor" xlink:href="img/decor.svg#shape-decor"></use>
@@ -51,9 +42,6 @@
 								<use class="shape-decor" xlink:href="img/decor.svg#shape-decor"></use>
 							</svg>
 						</div>
-					</div>
-					<div class="cta">
-						<a href="#events" class="btn btn-primary scroll-link">RSVP Now</a>
 					</div>
 				</div>
 				<div class="scroll-down"></div>
@@ -84,17 +72,17 @@
 				<div class="bride-and-groom flex-responsive">
 					<div class="groom">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/placeholders/800x800.png" alt="">
+							<img src="img/engagement/seanheadshot.jpg" alt="">
 						</div>
-						<h3>Nathan Rodriquez</h3>
+						<h3>Sean Everett</h3>
 						<h4>Groom</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi doloremque suscipit obcaecati odio culpa sint odit, labore pariatur veniam sequi eveniet vel vitae molestiae tenetur iste neque ducimus ratione fugit.</p>
 					</div>
 					<div class="bride">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/placeholders/800x800.png" alt="">
+							<img src="img/engagement/miaheadshot.jpg" alt="">
 						</div>
-						<h3>Christy Diaz</h3>
+						<h3>Mia Woike</h3>
 						<h4>Bride</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident neque veritatis, alias nostrum nisi rerum enim numquam perferendis maxime inventore commodi suscipit vero earum quam, laborum maiores.</p>
 					</div>
@@ -104,12 +92,12 @@
 			<div class="separator">
 				<div class="separator-carousel">
 					<div class="owl-carousel owl-theme">
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/1200x800.png" class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/nycstreet.jpg" class="item"><img src="img/engagement/nycstreet.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/kissing.jpg" class="item"><img src="img/engagement/kissing.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/supermanbed.jpg" class="item"><img src="img/engagement/supermanbed.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/pooltable.jpg" class="item"><img src="img/engagement/pooltable.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/bookerbed.jpg" class="item"><img src="img/engagement/bookerbed.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/engagement/ringandpearls.jpg" class="item"><img src="img/engagement/ringandpearls.jpg" alt="" class="img-as-bg"></a>
 					</div>
 				</div>
 			</div>
@@ -162,21 +150,21 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/engagement/louboutins.jpg" alt="">
 							</div>
-							<div class="date">2016</div>
+							<div class="date">2017</div>
 						</div>
 						<svg class="heart" width="38px" height="35px" viewBox="0 0 38 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
+							<p>We traveled from our Southern California getaway back to New York City in January of 2017 for our engagement photo shoot and to have our own little private celebration in the city we met.</p>
 						</div>
 					</li>
 				</ul>
 			</section>
 
-			<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
+			<div class="separator parallax" data-background-image="img/engagement/ringandpearls.jpg" data-parallax-factor=".8">
 				<div class="flowers"></div>
 				<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Big Day</h2>
 				<div class="decor"><i class="fa fa-heart-o"></i></div>
@@ -603,7 +591,7 @@
 			</section>
 
 			<footer>
-				<div class="footer-bg parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8"></div>
+				<div class="footer-bg parallax" data-background-image="img/engagement/louboutins.jpg" data-parallax-factor=".8"></div>
 				<div class="heart">
 					<svg viewBox="0 0 38 35">
 						<use class="shape-heart" xlink:href="img/heart.svg#shape-heart"></use>
