removing unwanted sections

--- a/index.html
+++ b/index.html
@@ -52,42 +52,13 @@
 					<button class="open-menu">Menu</button>
 					<ul class="menu">
 						<li><a class="scroll-link" href="#hero">Home</a></li>
-						<li><a class="scroll-link" href="#couple">Couple</a></li>
 						<li><a class="scroll-link" href="#story">Story</a></li>
 						<li><a class="scroll-link" href="#events">Events</a></li>
-						<li><a class="scroll-link" href="#rsvp">RSVP</a></li>
-						<li><a class="scroll-link" href="#people">People</a></li>
 						<li><a class="scroll-link" href="#gallery">Gallery</a></li>
-						<li><a class="scroll-link" href="#gifts">Gifts</a></li>
 					</ul>
 				</div>
 			</nav>
 
-			<section id="couple" class="section-couple">
-				<div class="flowers"></div>
-				<h2>Couple</h2>
-				<div class="section-intro">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dignissimos voluptate reprehenderit inventore quis dicta, aliquam possimus, explicabo assumenda, dolore consequatur praesentium iusto odio esse corporis fugiat pariatur a vel.</p>
-				</div>
-				<div class="bride-and-groom flex-responsive">
-					<div class="groom">
-						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/engagement/seanheadshot.jpg" alt="">
-						</div>
-						<h3>Sean Everett</h3>
-						<h4>Groom</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi doloremque suscipit obcaecati odio culpa sint odit, labore pariatur veniam sequi eveniet vel vitae molestiae tenetur iste neque ducimus ratione fugit.</p>
-					</div>
-					<div class="bride">
-						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/engagement/miaheadshot.jpg" alt="">
-						</div>
-						<h3>Mia Woike</h3>
-						<h4>Bride</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident neque veritatis, alias nostrum nisi rerum enim numquam perferendis maxime inventore commodi suscipit vero earum quam, laborum maiores.</p>
-					</div>
-				</div>
-			</section>
 
 			<div class="separator">
 				<div class="separator-carousel">
@@ -166,9 +137,9 @@
 
 			<div class="separator parallax" data-background-image="img/engagement/ringandpearls.jpg" data-parallax-factor=".8">
 				<div class="flowers"></div>
-				<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Big Day</h2>
+				<h2 data-after-countdown="We got married on Oct 28, 2017.">Counting Down to Our Big Day</h2>
 				<div class="decor"><i class="fa fa-heart-o"></i></div>
-				<div class="countdown-area" data-final-date="2016/12/31 23:59:59" data-after-countdown="Thank you for attending our wedding!"></div>
+				<div class="countdown-area" data-final-date="2017/10/28 23:59:59" data-after-countdown="Thank you for attending our wedding!"></div>
 			</div>
 
 			<section id="events" class="section-events">
@@ -180,10 +151,10 @@
 					<li class="flex-responsive">
 						<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
 						<div class="event-details animation-chain" data-animation="fadeInUp">
-							<h3>Wedding Ceremony</h3>
+							<h3>Wedding Event</h3>
 							<ul class="event-info">
-								<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-								<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
+								<li><span class="lnr lnr-map-marker"></span>Grand Hôtel du Palais Royal, 4 Rue de Valois, 75001 Paris, France</li>
+								<li><span class="lnr lnr-clock"></span>October 26-30, 2017</li>
 							</ul>
 							<div class="desc">
 								<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies eu erat. Consectetur risus scelerisque.</p>
